// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorsViews ErrorsStatusbar displays error 1`] = `
<div>
  <div
    class="Ellipsis-sc-1dn9bou-0 gzqRPC"
  >
    <span
      class="styled__ErrorText-sc-1dtvgs1-21 gSMage"
      title="Test.Error: Test error description"
    >
      <i
        class="IconContainer__I-sc-16whwc5-0 bXwiKG fa fa-exclamation-triangle"
      />
       
      Test.Error: Test error description
    </span>
  </div>
</div>
`;

exports[`ErrorsViews ErrorsStatusbar displays nothing if no error 1`] = `<div />`;

exports[`ErrorsViews ErrorsView displays nothing if no errors 1`] = `<div />`;

exports[`ErrorsViews ErrorsView displays procedure link if unknown procedure 1`] = `
<div>
  <div
    class="styled__StyledHelpFrame-sc-1dtvgs1-5 THzmJ"
  >
    <div
      class="styled__StyledHelpContent-sc-1dtvgs1-6 NNcJM"
    >
      <div
        class="styled__StyledHelpDescription-sc-1dtvgs1-7 dlNdyW"
      >
        <div
          class="styled__StyledCypherMessage-sc-1dtvgs1-11 styled__StyledCypherErrorMessage-sc-1dtvgs1-13 eiZHEz"
        >
          ERROR
        </div>
        <h4
          class="styled__StyledErrorH4-sc-1dtvgs1-18 iuwYhw"
        >
          Neo.ClientError.Procedure.ProcedureNotFound
        </h4>
      </div>
      <div
        class="styled__StyledDiv-sc-1dtvgs1-8 gtWulV"
      >
        <pre
          class="styled__StyledPreformattedArea-sc-1dtvgs1-20 dfaLxR"
        >
          not found
        </pre>
      </div>
      <div
        class="styled__StyledLinkContainer-sc-1dtvgs1-10 ghcLOH"
      >
        <a
          class="styled__StyledLink-sc-1dtvgs1-9 eqfWgl"
        >
          <i
            class="IconContainer__I-sc-16whwc5-0 eTELIJ fa fa-play-circle-o"
          />
           List available procedures
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErrorsViews ErrorsView does displays an error 1`] = `
<div>
  <div
    class="styled__StyledHelpFrame-sc-1dtvgs1-5 THzmJ"
  >
    <div
      class="styled__StyledHelpContent-sc-1dtvgs1-6 NNcJM"
    >
      <div
        class="styled__StyledHelpDescription-sc-1dtvgs1-7 dlNdyW"
      >
        <div
          class="styled__StyledCypherMessage-sc-1dtvgs1-11 styled__StyledCypherErrorMessage-sc-1dtvgs1-13 eiZHEz"
        >
          ERROR
        </div>
        <h4
          class="styled__StyledErrorH4-sc-1dtvgs1-18 iuwYhw"
        >
          Test.Error
        </h4>
      </div>
      <div
        class="styled__StyledDiv-sc-1dtvgs1-8 gtWulV"
      >
        <pre
          class="styled__StyledPreformattedArea-sc-1dtvgs1-20 dfaLxR"
        >
          Test error description
        </pre>
      </div>
    </div>
  </div>
</div>
`;
